<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".CadProduto">

    <TextView
        android:id="@+id/txtNome_Prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nome do Produto"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtNome_prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:baselineAligned="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/txtQtd_Prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quantidade"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtQtd_Prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/qtd_prod"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtPotencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Potência (W)"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtPotenc_Prod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/potenc_prod"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtDiasUso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Dias de Uso"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtDias_Uso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dias_uso"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtTempo_Uso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tempo de uso (Hrs)"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/edtTempo_uso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tempo_uso"
        android:inputType="number"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/button_send" />

</LinearLayout>